--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@stoplight/elements": "7.0.0-beta.6",
-    "@stoplight/elements-dev-portal": "1.0.0-beta.3",
+    "@stoplight/elements": "7.0.0-beta.7",
+    "@stoplight/elements-dev-portal": "1.0.0-beta.5",
     "canvas": "^2.8.0",
     "gatsby": "^3.7.1",
     "gatsby-image": "^3.7.1",
@@ -32,16 +32,16 @@
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-transformer-sharp": "^3.7.1",
     "jsdom": "^16.6.0",
-    "mobx": "^6.3.2",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.0.0",
     "gatsby-plugin-sass": "^4.7.1",
-    "gh-pages": "^3.2.1",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.0",
     "node-sass-package-importer": "^5.3.2",
     "typescript": "4.2.x"
