--- a/package.json
+++ b/package.json
@@ -1,53 +1,41 @@
 {
-  "name": "@stoplight/elements-starter-gatsby",
-  "description": "A starter template to build beautiful developer docs using Stoplight Elements & Gatsby",
-  "version": "0.1.0",
-  "author": "Stoplight <support@stoplight.io>",
+  "name": "@qualtrics/qualtrics-api-documentation",
+  "description": "Qualtrics API Documentation",
+  "version": "1.0.0",
+  "author": "Qualtrics <support@qualtris.com>",
   "license": "Unlicense",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,ts,tsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+  },
+  "dependencies": {
+    "@stoplight/elements": "^7.0.2",
+    "@stoplight/elements-dev-portal": "^1.0.0",
+    "gatsby-plugin-amplitude-analytics": "^3.2.0",
+    "gatsby": "^3.7.1",
+    "gatsby-plugin-robots-txt": "^1.6.8",
+    "canvas": "^2.8.0",
+    "jsdom": "^16.6.0",
+    "postcss": "^8.3.5",
+    "process": "^0.11.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "util": "^0.12.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "prettier": "2.2.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stoplightio/elements-starter-gatsby.git"
   },
   "bugs": {
     "url": "https://github.com/stoplightio/elements-starter-gatsby/issues"
-  },
-  "scripts": {
-    "reinstall": "rm -rf node_modules && yarn install",
-    "start": "gatsby develop -p 4200",
-    "serve": "gatsby serve -p 4200",
-    "build": "gatsby build",
-    "clean": "gatsby clean",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
-  },
-  "dependencies": {
-    "@stoplight/elements": "7.0.0-beta.7",
-    "@stoplight/elements-dev-portal": "1.0.0-beta.5",
-    "canvas": "^2.8.0",
-    "gatsby": "^3.7.1",
-    "gatsby-image": "^3.7.1",
-    "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-manifest": "^3.7.1",
-    "gatsby-plugin-offline": "^4.7.1",
-    "gatsby-plugin-react-helmet": "^4.7.1",
-    "gatsby-plugin-sharp": "^3.6.0",
-    "gatsby-source-filesystem": "^3.7.1",
-    "gatsby-transformer-sharp": "^3.7.1",
-    "jsdom": "^16.6.0",
-    "process": "^0.11.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.0.0",
-    "react-router-dom": "^5.2.0"
-  },
-  "devDependencies": {
-    "@types/react-helmet": "^6.0.0",
-    "gatsby-plugin-sass": "^4.7.1",
-    "gh-pages": "^3.2.3",
-    "node-sass": "^6.0.0",
-    "node-sass-package-importer": "^5.3.2",
-    "typescript": "4.2.x"
-  },
-  "keywords": [
-    "gatsby"
-  ]
+  }
 }
