--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@stoplight/elements": "^7.0.5",
-    "@stoplight/elements-dev-portal": "^1.0.6",
+    "@stoplight/elements-dev-portal": "^1.0.8",
     "canvas": "^2.8.0",
     "gatsby": "^3.7.1",
     "gatsby-plugin-amplitude-analytics": "^3.2.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-react-router-scroll": "^4.10.0",
     "jsdom": "^16.6.0",
     "postcss": "^8.3.5",
