--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-amplitude-analytics": "^3.2.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-react-router-scroll": "^4.10.0",
@@ -29,6 +30,7 @@
     "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
