Updating action tml

--- a/.github/workflows/yarn_CI.yml
+++ b/.github/workflows/yarn_CI.yml
@@ -31,5 +31,5 @@ jobs:
       with:
         node-version: '16'
         cache: 'yarn'
-      run: yarn
-      run: yarn build
+    - run: yarn
+    - run: yarn build
