--- a/.github/workflows/yarn_CI.yml
+++ b/.github/workflows/yarn_CI.yml
@@ -24,12 +24,10 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Setup node-version
+    - name: Build
       uses: actions/setup-node@v2
-
-    - name: Build 
       with:
         node-version: '16'
         cache: 'yarn'
-    - run: yarn
-    - run: yarn build
+      run: yarn
+      run: yarn build
