--- a/.github/workflows/yarn_CI.yml
+++ b/.github/workflows/yarn_CI.yml
@@ -24,10 +24,12 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Build
+    - name: Build Setup
       uses: actions/setup-node@v2
       with:
         node-version: '16'
         cache: 'yarn'
       run: yarn
+
+    - name: Build
       run: yarn build
