--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "format": "prettier --write \"**/*.{js,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "@stoplight/elements": "^7.1.0",
