--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "url": "^0.11.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
