--- a/.github/workflows/yarn_CI.yml
+++ b/.github/workflows/yarn_CI.yml
@@ -2,9 +2,8 @@ name: yarn CI
 
 on:
   push:
-    branches: [ ${GITHUB_REF##*/} ]
+    branches: [ master ]
   pull_request:
-    branches: [ ${GITHUB_REF##*/} ]
 
 jobs:
   build:
