--- a/.github/workflows/yarn_CI.yml
+++ b/.github/workflows/yarn_CI.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
       
     - name: Check CNAME Contents
       id: package
@@ -43,4 +41,4 @@ jobs:
       run: yarn
 
     - name: Build
-      run: yarn build
+      run: yarn run build
