Revert "First working version of search"

--- a/.github/workflows/yarn_CI.yml
+++ b/.github/workflows/yarn_CI.yml
@@ -1,10 +1,10 @@
 name: yarn CI
 
-#on:
-#  push:
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -41,4 +41,4 @@ jobs:
       run: yarn
 
     - name: Build
-      run: yarn run build
+      run: yarn build
