--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b gh-pages-staging"
   },
   "dependencies": {
-    "@stoplight/elements": "^7.1.0",
-    "@stoplight/elements-dev-portal": "^1.1.0",
+    "@stoplight/elements": "^7.3.7",
+    "@stoplight/elements-dev-portal": "^1.4.4",
     "canvas": "^2.8.0",
     "gatsby": "^3.7.1",
     "gatsby-plugin-amplitude-analytics": "^3.2.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-react-router-scroll": "^4.10.0",
@@ -31,6 +31,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "url": "^0.11.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
