--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b gh-pages"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b gh-pages-stage"
   },
   "dependencies": {
     "@stoplight/elements": "^7.5.18",
